2012-02-25  Felix Ingrand  <felix@cturtle>

	* Makefile.am: added export to properly export TEXINPUTS and BIBINPUTS.

2011-02-21  Francois Felix Ingrand  <felix@cturtle>

	* \* should probably be \\* all over the documentation... 

	* oprs-kernel.tex: updated the doc wrt use of env variable in the
	set oprs_data_path command.

2010-10-08  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-kernel.tex: Updated the doc for the changes in INT-TO-FLOAT,
		  FLOAT-TO-INT, FLOATP, INTEGERP and LONG-LONGP.

2010-03-23  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-kernel.tex (subsubsection{Multi Variable Special Action}):
	Change the doc to reflect the changes wrt to C-PRS 1.1 and OpenPRS.

2010-03-01  Francois Felix Ingrand  <felix@ingrand.net>

	* appendices.tex (chapter{How to Install the \COPRSDE{}}): Update
	the how to install OpenPRS section... 

	* copyright.tex: Bump the copyright year...

	* oprs-macros.tex: Bump the release version number to 1.0.6 Beta.

2010-02-21  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-kernel.tex: Jeff Rye (jrye@sift.info) Typos and added the
	doc for the new format 	directive.

	* mp.tex: some "package" had been changed in "pacopage" by a
	"stupid" global query replace ka->op...

2010-01-22  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-kernel.tex (subsection{Miscellaneous Evaluable Functions}):
	Document term-string-cat which has been around for quite a
	while... but was not documented.

2010-01-20  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-kernel.tex (subsection{Miscellaneous Evaluable Functions}):
	Fixed the documentation on N-ALL and N-ALL-LIST which both take
	LISP-LIST now and not C-LIST.

2004-06-08  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-macros.tex: \MP seems to be used by other macros??? which
	come out as Metapost in the PDF...

2004-05-27  Francois Felix Ingrand  <felix@laas.fr>

	* Makefile: Stop remaking all the opf.tex files when ope has been modified...
