@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% -*- Mode: latex -*- %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
-%% Copyright (c) 1991-2003 Francois Felix Ingrand.
+%% Copyright (c) 1991-2012 Francois Felix Ingrand.
 %% All rights reserved.
 %%
 %% Redistribution and use in source and binary forms, with or without
@@ -68,7 +68,8 @@ using the X11/Motif interface.
 \node{Arguments of the OPRS-Server}
 \cpindex{Arguments of the \OPRSS{}}
 
-Usage: \begin{verbatim}
+Usage: 
+\begin{verbatim}
 oprs-server [-X] [-l upper|lower|none] [-i server-port-number]
            [-m message-passer-hostname]
            [-j message-passer-port-number]
