@@ -1,3 +1,9 @@
+2012-09-11  Francois Felix Ingrand  <felix@ingrand.net>
+
+	* oprs-dump_f.h: uchar-> u_char
+
+ 	* Makefile.am: XT_FLAGS->XT_CFLAGS and add MOTIF_CFLAGS.
+
 2012-08-09  Felix Ingrand  <felix@cturtle>
 
 	* Makefile.am (noinst_LTLIBRARIES): do not build gtk binaries by
