@@ -1,3 +1,7 @@
+2012-09-11  Francois Felix Ingrand  <felix@ingrand.net>
+
+	* oprs-kernel.tex : Update the doc to mention the load external command.
+
 2012-02-25  Felix Ingrand  <felix@cturtle>
 
 	* Makefile.am: added export to properly export TEXINPUTS and BIBINPUTS.
